--- a/date/2024-04/index.htm
+++ b/date/2024-04/index.htm
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-18-free-high-speed-nodes.htm" title="4月18日→21.3M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接">4月18日→21.3M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-29-clash-node.htm" title="3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-26-free-v2ray.htm" title="9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-21-free-subscribe-node.htm" title="4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-5-free-ssr-node.htm" title="9月5日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月5日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-16-free-v2ray-subscribe.htm" title="10月16日→23M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">10月16日→23M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-2-free-v2ray.htm" title="8月2日→21.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月2日→21.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-23-free-node-subscribe.htm" title="8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-13-clash-node.htm" title="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-28-free-ssr-subscribe.htm" title="7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm" title="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-13-free-shadowrocket-node.htm" title="7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" title="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-29-free-subscribe-node.htm" title="7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
